// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TagComboBoxField rendering renders expected elements 1`] = `
<FieldWrapper
  className="TagComboBoxField"
  helperId="random-id-helper"
  helperText="Helper text"
  htmlFor="random-id"
  id="random-id-label"
  label="Label"
>
  <TagComboBox
    aria-describedby="random-id-helper"
    aria-labelledby="random-id-label"
    id="random-id"
    onChange={[MockFunction]}
    onError={[MockFunction]}
    tags={[]}
    validate={[MockFunction]}
  />
</FieldWrapper>
`;

exports[`TagComboBoxField rendering renders expected elements when optional properties are set 1`] = `
<FieldWrapper
  className="TagComboBoxField TestClass"
  error="Error"
  helperId="random-id-helper"
  helperText="Helper text"
  htmlFor="random-id"
  id="random-id-label"
  label="Label"
  required={true}
>
  <TagComboBox
    aria-describedby="random-id-helper"
    aria-labelledby="random-id-label"
    aria-required={true}
    error="Error"
    id="random-id"
    onChange={[MockFunction]}
    onError={[MockFunction]}
    tags={[]}
    validate={[MockFunction]}
  />
</FieldWrapper>
`;
